Hero section text update

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
             <div class="message__about-me">
                 <img alt="avatar.jpeg" class="avatar-image" src="images/s9S50Io5.jpeg">
                 <p class="section_about-me__description">
-                    Former violinist at State Opera Plovdiv, I’m Nikol Kostadinova, now pursuing web design and development. I have completed several courses at SoftUni, including Photoshop, Figma, UI Design, UX Design, and InDesign. I’m passionate about creating intuitive and beautiful digital experiences and continuously expanding my skills in both design and front-end development.
-                </p>
+                    My name is Nikol Kostadinova — a violinist with a Master’s degree and former orchestral musician at the Plovdiv Opera, now exploring the creative world of design and technology.
+
+                    I’m currently completing a program at SoftUni Creative, where I’ve been building solid skills in Adobe InDesign, Photoshop, Illustrator, and Figma. I also hold UX and UI design certifications and love crafting meaningful, user-focused digital experiences.
+
+                    With a strong artistic background and growing technical expertise, I’m passionate about blending creativity with functionality — turning ideas into clean, engaging design.                </p>
             </div>
             <div class="wrapper__tools-icons">
                 <img alt="Figma logo" class="social-icons" src="images/figma.svg">
