--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 
     <!-- Certifications -->
     <section class="section section__certifications" data-nav-link="#certifications">
-
         <h1 class="section__title">My Certificates</h1>
-        <div class="section__certifications--wrapper">
+
+        <div class="section__certifications--wrapper desktop-layout">
             <div class="certificates link__cert-ps">
                 <img alt="Photoshop Certificate" src="images/ps.png">
             </div>
@@ -130,6 +130,46 @@
             </div>
             <div class="certificates link__cert-indesign">
                 <img alt="InDesign Certificate" src="images/indesign-cert.png">
+            </div>
+        </div>
+
+        <div class="glide glide-certifications mobile-layout"> <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+                <li class="glide__slide">
+                    <div class="certificates link__cert-ps">
+                        <img alt="Photoshop Certificate" src="images/ps.png">
+                    </div>
+                </li>
+                <li class="glide__slide">
+                    <div class="certificates link__cert-ui">
+                        <img alt="UI Certificate" src="images/ui.png">
+                    </div>
+                </li>
+                <li class="glide__slide">
+                    <div class="certificates link__cert-ux">
+                        <img alt="UX Certificate" src="images/ux.png">
+                    </div>
+                </li>
+                <li class="glide__slide">
+                    <div class="certificates link__cert-indesign">
+                        <img alt="InDesign Certificate" src="images/indesign-cert.png">
+                    </div>
+                </li>
+            </ul>
+        </div>
+            <div class="glide__arrows" data-glide-el="controls">
+                <div class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff"><path d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"/></svg>
+                </div>
+                <div class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff"><path d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"/></svg>
+                </div>
+            </div>
+            <div class="glide__bullets" data-glide-el="controls[nav]">
+                <button class="glide__bullet" data-glide-dir="=0"></button>
+                <button class="glide__bullet" data-glide-dir="=1"></button>
+                <button class="glide__bullet" data-glide-dir="=2"></button>
+                <button class="glide__bullet" data-glide-dir="=3"></button>
             </div>
         </div>
     </section>
