Mobile version fixes

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </ul>
             </div>
 
-            <div class="glide__arrows" data-glide-el="controls">
+            <div class="glide__arrows">
                 <div class="glide__arrow glide__arrow--left" data-glide-dir="<">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff"><path d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"/></svg>
                 </div>
@@ -162,7 +162,7 @@
                 </li>
             </ul>
         </div>
-            <div class="glide__arrows" data-glide-el="controls">
+            <div class="glide__arrows">
                 <div class="glide__arrow glide__arrow--left" data-glide-dir="<">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff"><path d="m313-440 224 224-57 56-320-320 320-320 57 56-224 224h487v80H313Z"/></svg>
                 </div>
