--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 <button class="glide__bullet" data-glide-dir="=2"></button>
                 <button class="glide__bullet" data-glide-dir="=3"></button>
                 <button class="glide__bullet" data-glide-dir="=4"></button>
+                <button class="glide__bullet" data-glide-dir="=5"></button>
             </div>
         </div>
     </section>
