Fix website title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="images/logo.svg" rel="icon" type="image/svg+xml"/>
-    <title>Portfolio - Emanuil Kostadinov</title>
+    <title>Portfolio - Nikol Kostadinova</title>
     <link href="css/styles.css" rel="stylesheet">
     <script defer src="js/main.js" type="module"></script>
     <script async defer src="https://www.google.com/recaptcha/api.js"></script>
