--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="images/logo.svg" rel="icon" type="image/svg+xml"/>
+    <link href="public/images/logo.svg" rel="icon" type="image/svg+xml"/>
     <title>Portfolio - Nikol Kostadinova</title>
     <link href="css/styles.css" rel="stylesheet">
     <script defer src="js/main.js" type="module"></script>
@@ -40,7 +40,7 @@
     <section class="section section__about-me" data-nav-link="#about-me">
         <div class="section__about-me--wrapper">
             <div class="message__about-me">
-                <img alt="avatar.jpeg" class="avatar-image" src="images/s9S50Io5.jpeg">
+                <img alt="avatar.jpeg" class="avatar-image" src="public/images/s9S50Io5.jpeg">
                 <p class="section_about-me__description">
                     My name is Nikol Kostadinova — a violinist with a Master’s degree and former orchestral musician at the Plovdiv Opera, now exploring the creative world of design and technology.
 
@@ -49,10 +49,10 @@
                     With a strong artistic background and growing technical expertise, I’m passionate about blending creativity with functionality — turning ideas into clean, engaging design.                </p>
             </div>
             <div class="wrapper__tools-icons">
-                <img alt="Figma logo" class="social-icons" src="images/figma.svg">
-                <img alt="Photoshop logo" class="social-icons" src="images/ps-logo.svg">
-                <img alt="Illustrator logo" class="social-icons" src="images/illustrator.svg">
-                <img alt="InDesign logo" class="social-icons" src="images/indesign.png">
+                <img alt="Figma logo" class="social-icons" src="public/images/figma.svg">
+                <img alt="Photoshop logo" class="social-icons" src="public/images/ps-logo.svg">
+                <img alt="Illustrator logo" class="social-icons" src="public/images/illustrator.svg">
+                <img alt="InDesign logo" class="social-icons" src="public/images/indesign.png">
             </div>
             <span class="btn__learn-more--wrapper">
                 <button class="btn__learn-more">Learn more</button>
@@ -69,32 +69,32 @@
                 <ul class="glide__slides">
                     <li class="glide__slide">
                         <div class="slide-content">
-                            <img class="figma-mood-board project-image" src="images/thumb-figma-mood-board.png" alt="Slide 1 image">
+                            <img class="figma-mood-board project-image" src="public/images/thumb-figma-mood-board.png" alt="Slide 1 image">
                         </div>
                     </li>
                     <li class="glide__slide">
                         <div class="slide-content">
-                            <img class="project-image--1 project-image" src="images/thumb-project1.jpg" alt="Slide 1 image">
+                            <img class="project-image--1 project-image" src="public/images/thumb-project1.jpg" alt="Slide 1 image">
                         </div>
                     </li>
                     <li class="glide__slide">
                         <div class="slide-content">
-                            <img class="figma-project project-image" src="images/thumb-figma-project.png" alt="Slide 1 image">
+                            <img class="figma-project project-image" src="public/images/thumb-figma-project.png" alt="Slide 1 image">
                         </div>
                     </li>
                     <li class="glide__slide">
                         <div class="slide-content">
-                            <img class="project-image--2 project-image" src="images/thumb-project2.png" alt="Slide 1 image">
+                            <img class="project-image--2 project-image" src="public/images/thumb-project2.png" alt="Slide 1 image">
                         </div>
                     </li>
                     <li class="glide__slide">
                         <div class="slide-content">
-                            <img class="project-image--3 project-image" src="images/thumb-project3.jpg" alt="Slide 1 image">
+                            <img class="project-image--3 project-image" src="public/images/thumb-project3.jpg" alt="Slide 1 image">
                         </div>
                     </li>
                     <li class="glide__slide">
                         <div class="slide-content">
-                            <img class="project-image--4 project-image" src="images/thumb-project4.jpg" alt="Slide 1 image">
+                            <img class="project-image--4 project-image" src="public/images/thumb-project4.jpg" alt="Slide 1 image">
                         </div>
                     </li>
                 </ul>
@@ -126,16 +126,16 @@
 
         <div class="section__certifications--wrapper desktop-layout">
             <div class="certificates link__cert-ps">
-                <img alt="Photoshop Certificate" src="images/ps.png">
+                <img alt="Photoshop Certificate" src="public/images/ps.png">
             </div>
             <div class="certificates link__cert-ui">
-                <img alt="UI Certificate" src="images/ui.png">
+                <img alt="UI Certificate" src="public/images/ui.png">
             </div>
             <div class="certificates link__cert-ux">
-                <img alt="UX Certificate" src="images/ux.png">
+                <img alt="UX Certificate" src="public/images/ux.png">
             </div>
             <div class="certificates link__cert-indesign">
-                <img alt="InDesign Certificate" src="images/indesign-cert.png">
+                <img alt="InDesign Certificate" src="public/images/indesign-cert.png">
             </div>
         </div>
 
@@ -143,22 +143,22 @@
             <ul class="glide__slides">
                 <li class="glide__slide">
                     <div class="certificates link__cert-ps">
-                        <img alt="Photoshop Certificate" src="images/ps.png">
+                        <img alt="Photoshop Certificate" src="public/images/ps.png">
                     </div>
                 </li>
                 <li class="glide__slide">
                     <div class="certificates link__cert-ui">
-                        <img alt="UI Certificate" src="images/ui.png">
+                        <img alt="UI Certificate" src="public/images/ui.png">
                     </div>
                 </li>
                 <li class="glide__slide">
                     <div class="certificates link__cert-ux">
-                        <img alt="UX Certificate" src="images/ux.png">
+                        <img alt="UX Certificate" src="public/images/ux.png">
                     </div>
                 </li>
                 <li class="glide__slide">
                     <div class="certificates link__cert-indesign">
-                        <img alt="InDesign Certificate" src="images/indesign-cert.png">
+                        <img alt="InDesign Certificate" src="public/images/indesign-cert.png">
                     </div>
                 </li>
             </ul>
@@ -209,8 +209,8 @@
             </form>
         </div>
         <div class="wrapper__social-icons">
-            <img alt="facebook.png" class="social__fb" src="images/facebook.png">
-            <img alt="linked-in.png" class="social__linkedin" src="images/linked-in.png">
+            <img alt="facebook.png" class="social__fb" src="public/images/facebook.png">
+            <img alt="linked-in.png" class="social__linkedin" src="public/images/linked-in.png">
         </div>
         <div class="footer__copyright">
             &copy; 2025 Nikol Kostadinova
